# Trident-WEBGPU

./: .cursorignore  .gitattributes  .gitignore  .npmignore  LICENSE.md  README.md  deno.json  index.html  package-lock.json  package.json  rollup.config.js  server.py  tsconfig.json
samples/: main.ts  normalMap.wgsl
scripts/: copy-resources.js  patch-extensions.js  post-build.js
src/: Assets.ts  EngineDebug.ts  Events.ts  GameObject.ts  Geometry.ts  Object3D.ts  Scene.ts  Utils.ts  example.ts  index.ts
src/components/: Camera.ts  Component.ts  InstancedMesh.ts  InstancedMeshlet.ts  Light.ts  Mesh.ts  MeshV2.ts  Meshlet.ts  MeshletMesh.ts  MeshletV2.ts  MeshletV3.ts  Transform.ts
src/math/: AABB.ts  BoundingVolume.ts  Color.ts  Matrix4.ts  Plane.ts  Quaternion.ts  Sphere.ts  Vector2.ts  Vector3.ts  Vector4.ts
src/plugins/: BilateralFilter.ts  DataBackedBuffer.ts  Debugger.ts  Line.ts  OBJLoader.ts  OrbitControls.ts  RSMIndirectLighting.ts  TerrainGenerator.ts  TextureBlender.ts  TextureViewer.ts  UIStats.ts  Upscaler.ts  index.ts
src/plugins/GLTF/: GLTFLoader_Minimal.ts  GLTF_Parser.ts  gltf.ts  mat.ts
src/plugins/Impostors/: Dilator.ts  ImpostorMesh.ts
src/plugins/meshlets/metis-5.1.0/repo/: CMakeLists.txt
src/plugins/ui/: UIStats.ts  (+1 more)
src/renderer/: Buffer.ts  ComputeContext.ts  Material.ts  RenderCache.ts  RenderCommandBuffer.ts  RenderGraph.ts  Renderer.ts  RendererContext.ts  RendererDebug.ts  RenderingPipeline.ts  Shader.ts  ShaderCode.ts  ShaderUtils.ts  Texture.ts  TextureSampler.ts  WEBGPUMipsGenerator.ts
src/utils/: CRC32.ts  MemoryAllocator.ts
(+288 files in other folders)
